--- a/scss/_stylebase.scss
+++ b/scss/_stylebase.scss
@@ -1,6 +1,9 @@
 body {
   background: #154256;
 }
+h1 {
+  border: 1px solid black;
+}
 @include media("min", "xl") {
 }
 @include media("within", "xl") {
