--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 ul[class],
 ol[class] {
   padding: 0;
+  margin: 0;
 }
 
 body,
@@ -29,6 +30,7 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  padding: 0;
 }
 
 body {
