--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -7,6 +7,7 @@
 ul[class],
 ol[class] {
   padding: 0;
+  margin: 0;
 }
 
 body,
@@ -24,6 +25,7 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  padding: 0;
 }
 
 body {
